Fixes article header line disappears for longer text on mobile

--- a/scss/_component.article.scss
+++ b/scss/_component.article.scss
@@ -4,7 +4,7 @@
 
 .article__inner {
   @include span-columns(12);
-  padding: ($base-spacing-unit * 4) ($base-spacing-unit * 2);
+  padding: ($base-spacing-unit * 2) ($base-spacing-unit * 2);
 }
 
 .article__title {
@@ -25,8 +25,8 @@
   &::after {
     position: absolute;
     top: 1.1em; // 22px / 20px
-    right: 21.87359369%;
-    left: 21.87359369%;
+    right: 0;
+    left: 0;
     z-index: -1;
 
     display: block;
@@ -34,5 +34,10 @@
     background-color: $base-border-color;
 
     content: ' ';
+
+    @include bp(medium) {
+      right: 21.87359369%;
+      left: 21.87359369%;
+    }
   }
 }
